WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141480
Regression(
r179166
): Crash when accessing document.dir on a document with no elements
https://bugs.webkit.org/show_bug.cgi?id=141480
Summary
Regression(r179166): Crash when accessing document.dir on a document with no ...
Sam Weinig
Reported
2015-02-11 10:42:26 PST
Crash when accessing document.dir on a document with no elements
Attachments
Test case
(162 bytes, text/html)
2015-02-11 10:50 PST
,
Sam Weinig
no flags
Details
Patch
(3.47 KB, patch)
2015-02-11 13:54 PST
,
Sam Weinig
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2015-02-11 10:50:10 PST
Created
attachment 246397
[details]
Test case
Chris Dumez
Comment 2
2015-02-11 11:49:56 PST
Are you going to work on this? Otherwise, I am happy to take it since I caused the regression it seems.
Chris Dumez
Comment 3
2015-02-11 11:53:54 PST
https://bugs.webkit.org/show_bug.cgi?id=140922#c5
Sam Weinig
Comment 4
2015-02-11 13:54:57 PST
Created
attachment 246412
[details]
Patch
Chris Dumez
Comment 5
2015-02-11 13:57:25 PST
Comment on
attachment 246412
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246412&action=review
r=me % nit, thanks for fixing.
> LayoutTests/fast/dom/document-dir-empty-document-crash.html:16 > +shouldBe('doc.dir', '""');
nit: shouldBeEmptyString()
Chris Dumez
Comment 6
2015-02-11 14:00:25 PST
Comment on
attachment 246412
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246412&action=review
> Source/WebCore/ChangeLog:3 > + Crash when accessing document.dir on a document with no elements
Outdated bug title.
Radar WebKit Bug Importer
Comment 7
2015-02-11 15:34:16 PST
<
rdar://problem/19804351
>
Sam Weinig
Comment 8
2015-02-11 15:40:15 PST
Committed
r179971
: <
http://trac.webkit.org/changeset/179971
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug