REGRESSION(r179166): Crash when accessing document.dir on a document with no elements <rdar://problem/19804351> https://bugs.webkit.org/show_bug.cgi?id=141480

Reviewed by Chris Dumez.

Source/WebCore:

Test: fast/dom/document-dir-empty-document-crash.html

* html/HTMLDocument.cpp:
(WebCore::HTMLDocument::dir):
Don't unnecessarily dereference the documentElement. is<HTMLHtmlElement>() will handle null just fine.

LayoutTests:

* fast/dom/document-dir-empty-document-crash-expected.txt: Added.
* fast/dom/document-dir-empty-document-crash.html: Added.


Canonical link: https://commits.webkit.org/159531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179971 268f45cc-cd09-0410-ab3c-d52691b4dbfc